--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,10 @@
           "not ie 11",
           "not op_mini all"
         ]
-      }
+      },
+      "modules": false
     }]
   ],
+  "plugins": [],
   "sourceType": "module"
 }
